# txwc

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  dashboard.py  load_data.py  load_rxclass.py  load_vocab.py  load_vsac.py  pyproject.toml
.devcontainer/: devcontainer.json
.dlt/: .toolkits  config.toml  secrets.toml.example
claims_model/: .user.yml  dbt_project.yml  profiles.yml
claims_model/macros/: check_table_exists.sql
claims_model/models/: source.yml
claims_model/models/dimensions/: dim_employee.sql  dim_employer.sql  dim_facility.sql  dim_insurer.sql  dim_pharmacy_drug.sql  dim_provider.sql  dimension_models.yml
claims_model/models/facts/: fact_institutional_claim.sql  fact_institutional_claim_line.sql  fact_models.yml  fact_pharmacy_claim.sql  fact_pharmacy_claim_line.sql  fact_professional_claim.sql  fact_professional_claim_line.sql
notebooks/: add_ccsr_value_sets.ipynb  data_explore.ipynb  pdc.ipynb  rx_analysis.ipynb  surgery_effectiveness.ipynb  top10_analysis.ipynb  trend_analysis.ipynb  tuva_value_sets.ipynb
omop/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
omop/macros/: check_column_exists.sql  check_domain_id.sql  derive_care_site_id.sql  derive_employee_location_id.sql  derive_facility_location_id.sql  derive_person_id.sql  derive_provider_id.sql  get_concept_id.sql  get_concept_ids.sql  get_dose_unit_source_value.sql  get_route_concept_id.sql  get_route_source_value.sql  get_source_concept_ids.sql
omop/models/: source.yml
omop/scripts/: load_rxclass.py  load_seeds_to_terminology.py  load_vocab.py
(+46 files in other folders)
