[project]
name = "txwc"
version = "0.1.0"
description = "Texas Workers' Compensation healthcare analytics pipeline (OMOP CDM)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-core>=1.11",
    "dbt-duckdb>=1.10",
    "dlt[duckdb,workspace]>=1.24",
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = false
